k8s/overlays/production/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: lab
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
